--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 CHROMEDRIVER_LOCATION=/app/.chromedriver/bin/chromedriver
 INSTAGRAM_PASSWORD=222558618Aa$
-INSTAGRAM_USERNAME=candygirl13468
+INSTAGRAM_USERNAME=funer.iran
 INSTAPY_WORKSPACE=.
 PROXY_TYPE=Serveo
 SERVEO_HOST=serveo.net
 SERVEO_PORT=1111
-TAGS_TO_FOLLOW="#instadaily #girl"
+TAGS_TO_FOLLOW="#konkur #konkuri"
 TAG_BLACKLIST="#rain #thunderstorm"
 SLEEP_TIME=7200
 UNFOLLOW_NUMBER=80
